ingest-service-deployment/ingest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /ingest(/|$)(.*)
        backend:
          serviceName: gwas-ingest-service
          servicePort: 8080
